objects/Summary__c.object
<CustomObject>
    <fields>
        <fullName>encumbrance__c</fullName>
        <label>encumbrance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>insurance__c</fullName>
        <label>insurance</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>odometer__c</fullName>
        <label>odometer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registration__c</fullName>
        <label>registration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stolen__c</fullName>
        <label>stolen</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>writtenOff__c</fullName>
        <label>writtenOff</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Summary</label>
    <nameField>
        <displayFormat>SUM-{0000000}</displayFormat>
        <label>Summary  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>